--- a/extension/public/index.html
+++ b/extension/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <link href="main.css" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/8a98030ce8.js"></script>
