--- a/extension/public/index.html
+++ b/extension/public/index.html
@@ -5,16 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <link rel="manifest" href="manifest.json" />
-    <link href="main.css" rel="stylesheet">
-
-    <script src="https://kit.fontawesome.com/8a98030ce8.js"></script>
-<!--    <script type="text/javascript" src="content.js"></script>-->
-
     <title>React App</title>
+
+    <link rel="manifest" href="manifest.json" />
+    <script src="https://kit.fontawesome.com/8a98030ce8.js"></script>
+    <style>
+      html,
+      body {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 14px;
+        margin: 0;
+        padding: 0;
+      }
+
+      .modal-header {
+        width: 200px;
+        height: 200px;
+        background: url('./images/login-bg.jpg');
+        background-size: cover;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+      }
+
+      i {
+        font-size: 80px;
+        color: limegreen;
+        transition: all 0.3s ease;
+      }
+
+      i:hover {
+        cursor: pointer;
+        transform: scale(1.2);
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="text/javascript" src="background.js"></script>
+    <div class="modal-header" id="modal">
+      <i class="fas fa-power-off"></i>
+    </div>
+
+    <div id="root_extension"></div>
+
+    <script type="text/javascript" src="create-container.js"></script>
   </body>
 </html>
