updated App; added popup.js; updated babel/webpack config

--- a/extension/public/index.html
+++ b/extension/public/index.html
@@ -19,15 +19,56 @@
       }
 
       .modal-header {
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 400px;
         background: url('./images/login-bg.jpg');
         background-size: cover;
 
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
+      }
+
+      #root_extension {
+        margin-bottom: 40px;
+      }
+      #root_extension form {
+        color: white;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+      #root_extension form label {
+        display: flex;
+        flex-direction: column;
+        font-weight: 700;
+        margin-top: 7px;
+      }
+      #root_extension form input {
+        margin-top: 5px;
+        font-size: 15px;
+      }
+
+      #root_extension button {
+        color: #fff;
+        background-color: #1abc9c;
+        border-color: #1abc9c;
+        font-weight: 700;
+
+        text-align: center;
+        vertical-align: middle;
+        padding: .375rem .75rem;
+        margin-top: 10px;
+        font-size: 1rem;
+        line-height: 1.5;
+
+        cursor: pointer;
+      }
+
+      #root_extension #control-button {
+        width: 100%;
       }
 
       i {
@@ -43,12 +84,13 @@
     </style>
   </head>
   <body>
-    <div class="modal-header" id="modal">
-      <i class="fas fa-power-off"></i>
+    <div class="modal-header">
+      <div id="root_extension"></div>
+
+      <i class="fas fa-power-off" id="modal"></i>
     </div>
 
-    <div id="root_extension"></div>
-
     <script type="text/javascript" src="create-container.js"></script>
+    <script type="text/javascript" src="popup.js"></script>
   </body>
 </html>
