--- a/extension/public/index.html
+++ b/extension/public/index.html
@@ -8,7 +8,7 @@
     <title>React App</title>
 
     <link rel="manifest" href="manifest.json" />
-    <script src="https://kit.fontawesome.com/8a98030ce8.js"></script>
+    <script src="fontawesome.js"></script>
     <style>
       html,
       body {
